Refs #83583; Added companyId optional field for HTTP JSON API
